tests/workflows/tests/snapshots/env_vault__env_github_actions_push_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: push_json
---
{
  "success": true,
  "status": "synced",
  "platform": "github-actions",
  "env": "production",
  "added": 0,
  "updated": 2,
  "removed": 0,
  "secretVerification": "names_only",
  "auditRecorded": true
}
