tests/workflows/tests/snapshots/env_vault__env_pull_oidc_gitlab_two_vars_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
assertion_line: 979
expression: json
---
{
  "count": 2,
  "env": "preview",
  "vars": {
    "CI_PROVIDER": "gitlab",
    "SECRET_ONE": "value-1"
  }
}
