tests/workflows/tests/snapshots/env_vault__env_railway_pull_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: pull_json
---
{
  "success": true,
  "status": "imported",
  "platform": "railway",
  "env": "production",
  "count": 1,
  "keys": [
    "APPLICATION_SECRET"
  ],
  "auditRecorded": true
}
