tests/workflows/tests/snapshots/env_vault__env_railway_push_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: push_json
---
{
  "success": true,
  "status": "synced",
  "platform": "railway",
  "env": "production",
  "added": 0,
  "updated": 1,
  "removed": 0,
  "auditRecorded": true
}
