tests/workflows/tests/snapshots/env_vault__env_railway_status_json_envelope.snap
---
source: tests/workflows/tests/env_vault.rs
expression: status_json
---
{
  "success": true,
  "count": 1,
  "platforms": [
    {
      "platform": "railway",
      "label": "production",
      "env": "production",
      "status": "drifted",
      "added": 0,
      "changed": 0,
      "removed": 1,
      "driftKeys": [
        "APPLICATION_SECRET"
      ],
      "lastPushAt": null
    }
  ]
}
