tests/workflows/tests/snapshots/env_vault__personal_rotate-key_key_checkpoint_warning.snap
---
source: tests/workflows/tests/env_vault.rs
expression: value
---
{
  "success": true,
  "status": "rotated",
  "version": 2,
  "environment_count": 1,
  "environments": [
    "default"
  ],
  "warnings": [
    "The remote update succeeded, but the local key checkpoint could not be stored. Restore local storage access, then pull the latest project revision."
  ]
}
